// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.updateBatch > functionality > locked as false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": null,
        "note": "harum porro maxime",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": null,
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as false > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
        "currencyCode": "ISK",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": null,
        "note": "harum porro maxime",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as false > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "harum porro maxime",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
        "currencyCode": "ISK",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "harum porro maxime",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "harum porro maxime",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
        "currencyCode": "ISK",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "569.7900",
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "harum porro maxime",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "cum soluta esse",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "amet nesciunt assumenda",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-390.9500",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "cum soluta esse",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "amet nesciunt assumenda",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "200.3900",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-390.9500",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "200.3900",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "soluta esse necessitatibus",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "nesciunt assumenda perspiciatis",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "quam nisi amet",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "soluta esse necessitatibus",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "nesciunt assumenda perspiciatis",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "quam nisi amet",
      },
    },
  },
}
`;
